
5.1.0 -> 5.2a0:
    - jbj: expose rpmdsType() in rpmds ABI.
    - jbj: add rpmdsType() to name dependency sets status quo ante.
    - jbj: common approach to ensure triggers fire only once.
    - jbj: fire triggers from Provides: dependency set.
    - jbj: rpmio: add argiCmp and argiSort.
    - jbj: loop over 1 element NEVRA dependency set when firing triggers.
    - jbj: permit rpmdsNew() to create RPMTAG_NAME rpmds, simplify ds->Type.
    - jbj: permit multiple triggers to fire from packages.
    - jbj: don't install symclash.* to avoid picking up a dependency on python.
    - jbj: fix: check added file names against installed conflicts.
    - jbj: update nl.po (Translation Project).
    - rpm.org: permit hardlinks only with regular files.
    - jbj: fix: tagType() with multiple aliases returned the wrong type.
    - rpm.org: don't allow multiple definition of PatchX or SourceX
    - proyvind: install headers required by other installed headers. (FIXME!)
    - proyvind: unbreak rpm4compat.h wrt c++ function overrides.
    - proyvind: fix pointer type mismatch with 64 bit in glob.c.
    - proyvind: fix a couple of compile warnings in python bindings.
    - proyvind: remove references in autotools to removed files.
    - rse: upgrade build environment to GNU libtool 2.2.6
    - jbj: lua: fix: don't unlink a non-existent scriptlet file.
    - jbj: display error msg for lusers attempting "rpm -qp /bin" (#461362).
    - jbj: WR: remove version from config paths.
    - jbj: lua: fix: don't close dup'd stdout running lua scripts.
    - jbj: macosx: avoid multiple definitions of _program_name.
    - rse: upgrade embedded Lua from version 5.1.3 to 5.1.4
    - jbj: WR: remove --with-path-versioned in devtool targets.
    - jbj: WR: remove $(VERION) from macros paths in devtool targets.
    - jbj: WR: add devtool windriver-{host,target} configuration targets.
    - jbj: WR: fix: cleanup patch integration thinkos.